Added Node Version

--- a/views/contact/list.hbs
+++ b/views/contact/list.hbs
@@ -105,6 +105,13 @@ label {
             </div>
             <div class="panel-body">
                 <div class="form-group">
+                    <label class="searchBox searchLable">Търсене: </label>
+                    <div class="searchBox">
+                        <input type="text" name="searchBar" id="searchBar" >
+                        <div class="suggestions">
+                        </div>
+                        <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                    </div>
                     <div class="add-contact-button">
                         <a class="btn btn-primary btn-sm" href="/contact/{{this.id}}">Добави</a>
                     </div>
